# AutoSkillz-Standoff2-External

./: README.md
loader/: settings.gradle.kts  sign.jks
loader/app/: build.gradle.kts
loader/app/src/main/: AndroidManifest.xml
loader/app/src/main/res/anim/: open_icon_anim.xml
loader/app/src/main/res/drawable/: activity_bg.xml  close_floating_bg.xml  drawer_bg.xml  ic_about_github.xml  ic_about_telegram.xml  ic_about_version.xml  ic_launcher_monochrome.xml  ic_logcat_refresh.xml  ic_logcat_save.xml  ic_menu_about.xml  ic_menu_home.xml  ic_menu_logcat.xml  ic_menu_status.xml  ic_status_start.xml  ic_status_stop.xml  menu_floating_tabs_bg.xml  pre_activity_edittext_bg.xml  pre_activity_login_bg.xml
loader/app/src/main/res/layout/: about_fragment.xml  close_floating_view.xml  game_activity.xml  game_view.xml  home_fragment.xml  icon_floating_view.xml  logcat_fragment.xml  menu_floating_view.xml  post_activity.xml  post_activity_drawer.xml  (+3 more)
loader/gradle/: libs.versions.toml
loader/gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  main.cpp
native/java/: esp.cpp  esp.h  menu.cpp  menu.h  vars.cpp  vars.h
native/utils/: logcat.cpp  logcat.h  server.cpp  server.h
standoff/: CMakeLists.txt  main.cpp
standoff/features/: aim.cpp  aim.h  esp.cpp  esp.h
standoff/sdk/: lazy_singleton.cpp  lazy_singleton.h  player_controller.cpp  player_controller.h  player_manager.cpp  player_manager.h  sdk.h
standoff/sdk/engine/: camera.cpp  camera.h  il2cpp.h  memory.cpp  memory.h  transform.cpp  transform.h  unity.h
standoff/utils/: client.cpp  client.h  logcat.cpp  logcat.h  vars.h
(+28 files in other folders)
